--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <!-- Font Awesome cdn  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Link Css -->
+
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boolando</title>
 </head>
 <body>
     <header>
@@ -12,24 +17,26 @@
             <!-- Categorie Uomo-Donna-Bambino -->
 
             <div class="category">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul class="left">
+                    <li>Donna</li>
+                    <li>Uomo</li>
+                    <li>Bambini</li>
                 </ul>
             </div>
 
             <!-- Logo Boolean -->
 
-            <div id="logo"> </div>
+            <div class="logo">
+                <img src="img/boolean-logo.png" alt="Boolean">
+            </div>
 
             <!-- Profilo Wish List Login -->
 
             <div class="wish-list">
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><i class="fa-regular fa-user"></i></li>
+                    <li><i class="fa-regular fa-heart"></i></li>
+                    <li><i class="fa-solid fa-bag-shopping"></i></li>
                 </ul>
             </div>
         
