--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
         <section>
 
             <div class="row">
+                <!-- col 1 -->
 
                 <div class="col">
 
                     <div class="card">
-                        <img src="img/1.webp" alt="img1">
+                        <img class="over" src="img/1.webp" alt="img1">
+                        <img class="under" src="img/1b.webp">
                         <div class="heart"><i class="fa-solid fa-heart"></i></div>
 
                         <!-- top-bar -->
@@ -76,13 +78,72 @@
                         <div class="price">14,99&euro; <span class="oldprice">29,99 &euro;</span></div>
                     </div>
 
-
-
                 </div>
+
+                <!-- col 2 -->
+
                 <div class="col">
 
                     <div class="card">
-                        <img src="img/1.webp" alt="img1">
+                        <img class="over" src="img/2.webp" alt="img1">
+                        <img class="under" src="img/2b.webp">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
+
+                        <!-- top-bar -->
+
+                        <div class="top-bar">
+                            <div class="discount text-white">-50%</div>
+                            <div class="sustainability text-white none">Sostenibilità</div>
+                        </div>
+
+                    </div>
+
+                         <!-- bottom-bar -->
+
+                    <div class="bottom-bar">
+                        <div class="brand">Guess</div>
+                        <div class="model">Roses TEE</div>
+                        <div class="price">20,99&euro; <span class="oldprice">29,99 &euro;</span></div>
+                    </div>
+
+                </div>
+
+                <!-- col 3 -->
+
+                <div class="col">
+
+                    <div class="card">
+                        <img class="over" src="img/3.webp" alt="img1">
+                        <img class="under" src="img/3b.webp">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
+
+                        <!-- top-bar -->
+
+                        <div class="top-bar">
+                            <div class="discount text-white">-50%</div>
+                            <div class="sustainability text-white none">Sostenibilità</div>
+                        </div>
+
+                    </div>
+
+                         <!-- bottom-bar -->
+
+                    <div class="bottom-bar">
+                        <div class="brand">Come Zucchero Filato</div>
+                        <div class="model">VOGLIA DI COLORI PASTELLO</div>
+                        <div class="price">128,99&euro; <span class="oldprice">184,99 &euro;</span></div>
+                    </div>
+
+                </div>
+
+                <!-- col 4 -->
+
+                <div class="col">
+
+                    <div class="card">
+                        <img class="over" src="img/4.webp" alt="img1">
+                        <img class="under" src="img/4b.webp">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
 
                         <!-- top-bar -->
 
@@ -97,17 +158,48 @@
 
                     <div class="bottom-bar">
                         <div class="brand">Levi's</div>
-                        <div class="model">Relaxed fit tee unisex</div>
+                        <div class="model">TEE UNISEX</div>
                         <div class="price">14,99&euro; <span class="oldprice">29,99 &euro;</span></div>
                     </div>
 
-
-
                 </div>
+
+                <!-- col 5 -->
+
                 <div class="col">
 
                     <div class="card">
-                        <img src="img/1.webp" alt="img1">
+                        <img class="over" src="img/5.webp" alt="img1">
+                        <img class="under" src="img/5b.webp">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
+
+                        <!-- top-bar -->
+
+                        <div class="top-bar">
+                            <div class="discount text-white">-50%</div>
+                            <div class="sustainability text-white none">Sostenibilità</div>
+                        </div>
+
+                    </div>
+
+                         <!-- bottom-bar -->
+
+                    <div class="bottom-bar">
+                        <div class="brand">Maya Deluxe</div>
+                        <div class="model">STRIPE BODICE</div>
+                        <div class="price">99,99&euro; <span class="oldprice"></span></div>
+                    </div>
+
+                </div>
+
+                <!-- col 6 -->
+
+                <div class="col">
+
+                    <div class="card">
+                        <img class="over" src="img/6.webp" alt="img1">
+                        <img class="under" src="img/6b.webp">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
 
                         <!-- top-bar -->
 
@@ -121,15 +213,17 @@
                          <!-- bottom-bar -->
 
                     <div class="bottom-bar">
-                        <div class="brand">Levi's</div>
-                        <div class="model">Relaxed fit tee unisex</div>
-                        <div class="price">14,99&euro; <span class="oldprice">29,99 &euro;</span></div>
+                        <div class="brand">Esprit</div>
+                        <div class="model">MAGLIONE BLACK</div>
+                        <div class="price">29,99&euro; <span class="oldprice"></span></div>
                     </div>
 
-
-
                 </div>
-                
+
+
+
+            </div>
+
 
             
 
